Started conversion of Year 2017 to standard format.