@@ -2,19 +2,22 @@ package com.dwelguisz.year2017;
 
 import com.dwelguisz.base.AoCDay;
 
+import java.time.Instant;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class TwistyTrampolines extends AoCDay {
     public void solve() {
-        List<String> lines = readFile("/home/dwelguisz/personal/advent-of-code/src/resources/year2017/day05/input.txt");
-        List<Integer> jumpInstructions = lines.stream().map(Integer::parseInt).collect(Collectors.toList());
+        timeMarkers[0] = Instant.now().toEpochMilli();
+        List<String> lines = readResoruceFile(2017,5,false,0);
+        List<Integer> jumpInstructions = lines.stream().map(Integer::parseInt).toList();
         Integer[] jumpInst = jumpInstructions.toArray(new Integer[0]);
         Integer[] part1List = jumpInst.clone();
-        Integer part1 = solutionPart1(part1List);
-        Long part2 = solutionPart2(jumpInst);
-        System.out.println(String.format("Part 1 Answer: %d",part1));
-        System.out.println(String.format("Part 2 Answer: %d",part2));
+        timeMarkers[1] = Instant.now().toEpochMilli();
+        part1Answer = solutionPart1(part1List);
+        timeMarkers[2] = Instant.now().toEpochMilli();
+        part2Answer = solutionPart2(jumpInst);
+        timeMarkers[3] = Instant.now().toEpochMilli();
     }
 
     public Integer solutionPart1(Integer[] jumpInstructions) {
